fix enter img on tablet

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -78,14 +78,17 @@
             
             @media $mq.not_mobile
                 position absolute
-                bottom 0
-                right -25px
+                bottom 70px
+                right 0
+                width 300px
+                max-width 100%
                 margin-top 0
             
             @media $mq.desktop
                 top 173px
                 bottom auto
                 right 44px
+                width auto
 
         &__title
             position relative
